# django-satella-metrics

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
django_satella_metrics/: __init__.py
tests/test_it/: apps.py  tests.py  views.py
tests/tests/: settings.py  urls.py
